--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -14,24 +14,27 @@
   width: 10%;
 }
 
+.calendo-theme {
+  background-color: blueviolet;
+}
 @media screen and (max-width: 768px) {
-.btn img {
+  .btn img {
     filter: invert(100%);
     height: 70%;
     width: 70%;
-}
-.col {
-  font-size: medium;
-}
+  }
+  .col {
+    font-size: medium;
+  }
 }
 
 @media screen and (max-width: 992px) {
-.btn img {
+  .btn img {
     filter: invert(100%);
     height: 15%;
     width: 15%;
-}
-.col {
-  font-size: large;
-}
+  }
+  .col {
+    font-size: large;
+  }
 }
